secondfile/objects/Support_Center__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Service Cloud</description>
    <fields>
        <fullName>BGeneralQ__c</fullName>
        <label>BGeneralQ</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BL_Disputes__c</fullName>
        <label>BL_Disputes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_TaxesExemptions__c</fullName>
        <label>B_TaxesExemptions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA_TTCreation__c</fullName>
        <label>SA_TTCreation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA_TTEscalation__c</fullName>
        <label>SA_TTEscalation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_Cancellation__c</fullName>
        <label>SD_Cancellation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_Escalation__c</fullName>
        <label>SD_Escalation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_Macd__c</fullName>
        <label>SD_Macd</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_Mobility__c</fullName>
        <label>SD_Mobility</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_OrderStatus__c</fullName>
        <label>SD_OrderStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_RDSAssistance__c</fullName>
        <label>SD_RDSAssistance</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_TTU__c</fullName>
        <label>SD_TTU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Support_Center</label>
</CustomObject>